[Bug 4644859] Initial fix for many of the find bugs issues in Giraph.
git-svn-id: https://svn.apache.org/repos/asf/incubator/giraph/trunk@1161913 13f79535-47bb-0310-9956-ffa450edef68